# Bioneurones

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
bioneurones/: __main__.py  shared_data.py
bioneurones/gui/: __init__.py  settings.py  setup_screens.py
bioneurones/world/: __init__.py  loader.py
bioneurones/world/points/: __init__.py
bioneurones2/: __init__.py  __main__.py  settings.py
bioneurones2/ui/: __init__.py  display.py  launcher.py
