[tool.poetry]
name = "bioneurones"
version = "0.1-alpha"
description = "Simple AI Life Simulation"
authors = ["Virinas-code <alexcode228@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
pygame-menu = "^4.2.8"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
pylint = "^2.14.4"
flake8 = "^4.0.1"
black = "^22.6.0"
ipython = "^8.4.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
